[package]
name = "crytt"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
p256 = "0.13.2"
spki = "0.7.3"
rand = "0.8.0"
rsa = "0.9.8"
mosquitto-rs = "0.11.2"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.9"
hex = "0.4.3"
aes = "0.8.4"
aes-gcm = "0.10.3"
serde = "1.0.219"
serde_json = "1.0.141"
chrono = "0.4.41"
